--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@project/shared-core": ["libs/shared/core/src/index.ts"],
+      "@project/shared-helpers": ["libs/shared/helpers/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
