--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
     tty: true
     volumes:
       - ./:/home/node/app
-    # ports:
-    #   - 127.0.0.1:3000:3000
+    ports:
+      - 127.0.0.1:3000:3000
+    environment:
+      NX_DAEMON: true
