Adds config support to user application. Also removes NX_DAEMON from general docker-compose.yml file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
       - ./:/home/node/app
     ports:
       - 127.0.0.1:3000:3000
-    environment:
-      NX_DAEMON: true
+    # environment:
+    #   NX_DAEMON: true
