--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/mongoose": "10.1.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "8.1.0",
     "axios": "^1.6.0",
@@ -16,6 +17,7 @@
     "class-validator": "0.14.1",
     "dayjs": "1.11.13",
     "joi": "17.13.3",
+    "mongoose": "8.8.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
