--- a/project/apps/user/docker-compose.dev.yml
+++ b/project/apps/user/docker-compose.dev.yml
@@ -10,10 +10,16 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_DB}
 
     ports:
-      - 27017:27017
+      - ${MONGO_PORT}:27017
 
     volumes:
       - readme-8.mongo.user:/data/db
+
+    healthcheck:
+        test: echo 'db.runCommand("ping").ok' | mongosh mongodb://${MONGO_USER}:${MONGO_PASSWORD}@localhost:27017/?authSource=${MONGO_DB} --quiet
+        interval: 10s
+        timeout: 5s
+        retries: 5
 
   readme-8.user.mongo.ui:
     image: mongo-express:1.0.2-20
