Adds mongo validation pipe.

--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -24,6 +24,7 @@
       "@project/data-access": ["libs/shared/data-access/src/index.ts"],
       "@project/shared-core": ["libs/shared/core/src/index.ts"],
       "@project/shared-helpers": ["libs/shared/helpers/src/index.ts"],
+      "@project/shared-pipes": ["libs/shared/pipes/src/index.ts"],
       "@project/user-config": ["libs/user/config/src/index.ts"]
     }
   },
