--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -18,7 +18,9 @@
     "paths": {
       "@project/authentication": ["libs/user/authentication/src/index.ts"],
       "@project/blog-comment": ["libs/blog/blog-comment/src/index.ts"],
+      "@project/blog-config": ["libs/blog/config/src/index.ts"],
       "@project/blog-models": ["libs/blog/models/src/index.ts"],
+      "@project/blog-notifications": ["libs/blog/notifications/src/index.ts"],
       "@project/blog-post": ["libs/blog/blog-post/src/index.ts"],
       "@project/blog-user": ["libs/user/blog-user/src/index.ts"],
       "@project/data-access": ["libs/shared/data-access/src/index.ts"],
